
  * New upstream release.
  * Make '/usr/bin/swipl' a symlink again. This was a regression introduced
    by my fix to #456261 which was preventing scripts to use a shebang line
    pointing to swipl. Passing the environment variable PL to configure sets
    the target binary name in a far more less brittle manner. (Closes: #462646)
  * Add missing ${shlibs:Depends} to swi-prolog-http.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 11 Feb 2008 09:45:02 +0000

swi-prolog (5.6.49-2) unstable; urgency=low

  * Use DEB_BUILD_ARCH instead of DEB_BUILD_GNU_TYPE for determining when
    we are building on ARM.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 25 Jan 2008 22:06:56 +0000

swi-prolog (5.6.49-1) unstable; urgency=low

  * New upstream release.
  * Disable GCC optimisations on ARM in an attempt to diagnose FTBFS.
  * Fix bug in "swipl" wrapper which discarding arguments. (Closes: #462368)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 24 Jan 2008 16:34:25 +0000

swi-prolog (5.6.48-1) unstable; urgency=low

  * New upstream release.
  * Patch plld.c so it calls 'swipl' instead of 'pl' (Closes: #312523)
  * Rework main binary such that /usr/bin/swipl is a shell script instead
      of a symlink (Closes: #456261)
  * Delete empty directories (spotted by lintian)
  * Tidy (unfixed) Lintian "image-file-in-usr-lib" overrides.
  * Update Standards-Version: to 3.7.3.
  * Require debhelper >= 5.
  * Add debian/watch.
  * Move from XS-Vcs-* to Vcs-*.
  * Add ${misc:Depends} for all binaries.
  * Include dpatch.make instead of re-implementing patch/unpatch targets.
  * Remove RPATH from pl2xpce.so in install target (spotted by lintian)
  * Fix FTBFS on ARM.
  * Rename Vcs-Browse -> Vcs-Browser. (Thanks to Daniel Baumann)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 28 Dec 2007 18:55:24 +0000

swi-prolog (5.6.47-1) unstable; urgency=low

  * New upstream version (Closes: #295209, #308325, #425580)
  * New maintainer (Closes: #422576)
  * Bump Debhelper compatibility to 5