@@ -6,6 +6,7 @@ swi-prolog (5.6.50) unstable; urgency=low
     pointing to swipl. Passing the environment variable PL to configure sets
     the target binary name in a far more less brittle manner. (Closes: #462646)
   * Add missing ${shlibs:Depends} to swi-prolog-http.
+  * Cleanup debian/rules.
 
  -- Chris Lamb <chris@chris-lamb.co.uk>  Mon, 11 Feb 2008 09:45:02 +0000
 
